# lidar_feature_extraction

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  README.md  gauss_newton.html  genindex.html  index.html  objects.inv  package.xml  robust_stddev_estimator.html  search.html  searchindex.js
ekf_localizer/: CMakeLists.txt  package.xml
ekf_localizer/include/ekf_localizer/: aged_message_queue.hpp  check.hpp  covariance.hpp  delay.hpp  ekf_localizer.hpp  mahalanobis.hpp  measurement.hpp  normalize_yaw.hpp  numeric.hpp  pose_measurement.hpp  state_index.hpp  state_transition.hpp  string.hpp  tf.hpp  twist_measurement.hpp  update_interval.hpp  warning.hpp
ekf_localizer/launch/: ekf_localizer.launch.xml
ekf_localizer/src/: check.cpp  covariance.cpp  ekf_localizer.cpp  mahalanobis.cpp  measurement.cpp  pose_measurement.cpp  state_transition.cpp  string.cpp  tf.cpp  twist_measurement.cpp  update_interval.cpp  warning.cpp
ekf_localizer/test/: test_check.cpp  test_covariance.cpp  test_ekf_localizer.cpp  test_mahalanobis.cpp  test_measurement.cpp  test_pose_measurement.cpp  test_state_transition.cpp  test_string.cpp  test_tf.cpp  test_update_interval.cpp
ekf_localizer/test/src/: test_ekf_localizer.cpp
extraction/: CMakeLists.txt  LICENSE  package.xml
extraction/app/: feature_extraction.cpp
extraction/config/: lidar_feature_library.param.yaml
extraction/include/: algorithm.hpp  downsample.hpp  iterator.hpp  mask.hpp  neighbor.hpp  ros_msg.hpp
extraction/include/lidar_feature_extraction/: algorithm.hpp  cloud_iterator.hpp  color_points.hpp  convolution.hpp  curvature.hpp  curvature_label.hpp  fill.hpp  hyper_parameter.hpp  index_range.hpp  iterator.hpp  label.hpp  mapped_points.hpp  mask.hpp  math.hpp  neighbor.hpp  occlusion.hpp  out_of_range.hpp  parallel_beam.hpp  point_label.hpp  point_type.hpp  range.hpp  range_message.hpp  ring.hpp  subscription.hpp
extraction/launch/: lidar_feature_extraction.launch.xml
extraction/src/: color_points.cpp  convolution.cpp  curvature.cpp  feature_extraction.cpp  index_range.cpp  iterator.cpp  math.cpp  ring.cpp
extraction/test/: test_algorithm.cpp  test_color_points.cpp  test_convolution.cpp  test_curvature.cpp  test_fill.cpp  test_index_range.cpp  test_iterator.cpp  test_label.cpp  test_mapped_points.cpp  test_mask.cpp  test_math.cpp  test_neighbor.cpp  test_occlusion.cpp  test_out_of_range.cpp  test_parallel_beam.cpp  test_range.cpp  test_range_message.cpp  test_ring.cpp
imu_integration/: CMakeLists.txt  package.xml
imu_integration/include/imu_integration/: integration.hpp  rkmk.hpp
imu_integration/src/: integration.cpp
imu_integration/test/: test_rkmk.cpp
include/: label.hpp  (+20 more)
kalman_filter/: CMakeLists.txt  LICENSE  package.xml
kalman_filter/include/kalman_filter/: kalman_filter.hpp  matrix_size.hpp  time_delay_kalman_filter.hpp
kalman_filter/src/: kalman_filter.cpp  time_delay_kalman_filter.cpp
kalman_filter/test/: test_matrix_size.cpp  test_time_delay_kalman_filter.cpp
lib/: CMakeLists.txt  package.xml
lib/include/lidar_feature_library/: algorithm.hpp  convert_point_cloud_type.hpp  degree_to_radian.hpp  downsample.hpp  eigen.hpp  matrix_types.hpp  numeric.hpp  pcl_utils.hpp  point_type.hpp  qos.hpp  random.hpp  ros_msg.hpp  span.hpp  stats.hpp  transform.hpp
lib/src/: algorithm.cpp  eigen.cpp  lib.cpp  pcl_utils.cpp  random.cpp  ros_msg.cpp  stats.cpp  transform.cpp
lib/test/: test_algorithm.cpp  test_degree_to_radian.cpp  test_eigen.cpp  test_numeric.cpp  test_pcl_utils.cpp  test_random.cpp  test_ros_msg.cpp  test_span.cpp  test_stats.cpp  test_transform.cpp
lidar_feature_launch/: package.xml  setup.cfg  setup.py
lidar_feature_launch/config/: lidar_feature_extraction.param.yaml
lidar_feature_launch/launch/: convergence.launch.py  localization.launch.py  mapping.launch.py  odometry.launch.py
localization/: CMakeLists.txt  generate_jacobian.py  package.xml
localization/app/: convergence.cpp  localization.cpp  odometry.cpp
localization/include/lidar_feature_localization/: alignment.hpp  degenerate.hpp  edge.hpp  edge_surface_map.hpp  edge_surface_scan.hpp  edge_surface_tuple.hpp  filter.hpp  irls.hpp  jacobian.hpp  kdtree.hpp  loam.hpp  loam_optimization_problem.hpp  localizer.hpp  map_io.hpp  math.hpp  matrix_type.hpp  odometry.hpp  optimization_problem.hpp  optimization_result.hpp  optimizer.hpp  pcl_utils.hpp  point_cloud_map.hpp  point_to_vector.hpp  pointcloud_to_matrix.hpp  pose_updater.hpp  posevec.hpp  rad2deg.hpp  recent_scans.hpp  robust.hpp  stamp_sorted_objects.hpp  subscriber.hpp  surface.hpp  transform.hpp
localization/jacobian/include/jacobian/: drp_dq.h  drp_dq.hpp
localization/jacobian/src/: drp_dq.c  drp_dq.cpp
localization/jacobian/test/: test_jacobian.cpp
localization/launch/: lidar_feature_localization.launch.xml
localization/src/: alignment.cpp  convergence.cpp  degenerate.cpp  edge.cpp  irls.cpp  jacobian.cpp  kdtree.cpp  localization.cpp  odometry.cpp  optimizer.cpp  posevec.cpp  robust.cpp
localization/test/: test_alignment.cpp  test_degenerate.cpp  test_edge.cpp  test_filter.cpp  test_irls.cpp  test_jacobian.cpp  test_kdtree.cpp  test_loam.cpp  test_math.cpp  test_odometry.cpp  test_optimization_problem.cpp  test_optimizer.cpp  test_pointcloud_to_matrix.cpp  test_posevec.cpp  test_recent_scans.cpp  test_robust.cpp  test_stamp_sorted_objects.cpp  test_surface.cpp
map_loader/: CMakeLists.txt  package.xml
map_loader/src/: map_loader.cpp
mapping/: CMakeLists.txt  package.xml
mapping/include/lidar_feature_mapping/: map.hpp
mapping/launch/: lidar_feature_mapping.launch.xml
mapping/src/: mapping.cpp  node.cpp
mapping/test/: test_map.cpp
rotationlib/: CMakeLists.txt  package.xml
rotationlib/include/rotationlib/: hat.hpp  quaternion.hpp
rotationlib/src/: hat.cpp  quaternion.cpp
rotationlib/src/jacobian/: quaternion.cpp
rotationlib/test/: test_hat.cpp  test_hat.hpp  test_jacobian_quaternion.cpp  test_quaternion.cpp
rotationlib/testlib/: near_with_precision.hpp
tf_generator/: CMakeLists.txt  package.xml
tf_generator/src/: node.cpp
(+47 files in other folders)
