<?xml version="1.0"?>
<package format="2">
  <name>lio_sam</name>
  <version>1.0.0</version>
  <description>Lidar Odometry</description>

  <maintainer email="shant@mit.edu">Tixiao Shan</maintainer>

  <license>TODO</license>
  <author>Tixiao Shan</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pcl_ros</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>tf</depend>

  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <!-- <depend>GTSAM</depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
