<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_feature_localization</name>
  <version>0.1.0</version>
  <description>Lidar feature based localization and odometry</description>
  <maintainer email="ishitah.takeshi@gmail.com">Takeshi Ishita</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>lidar_feature_library</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rcpputils</depend>
  <depend>rotationlib</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
