<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_feature_mapping</name>
  <version>0.0.0</version>
  <description>Tool to build a lidar-feature map</description>
  <maintainer email="ishitah.takeshi@gmail.com">Takeshi Ishita</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>lidar_feature_library</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
